# taskmate

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: README.md  deploy.yml  do-cleanup.yml
backend/: Dockerfile  quickstart.py
backend/alembic/: env.py
backend/alembic/versions/: 301a1bbd2c84_create_users_table.py  a5b6c7d8e9f0_add_priority_tags_audit.py  b4d7e8f9a2c3_add_recurrence_fields.py  e2633c74ea10_create_tasks_table.py
backend/app/: config.py
backend/app/events/: publisher.py
backend/app/models/: conversation.py  message.py  task.py
backend/app/routes/: audit.py  auth.py  chat.py  health.py
backend/app/schemas/: event.py  task.py  user.py
backend/app/services/: chat_service.py  tag_service.py  task_service.py  user_service.py
backend/app/utils/: security.py
backend/backend/: .dockerignore  .env.example  pyproject.toml  requirements.txt
backend/backend/alembic/versions/: f3c8d9e0a1b2_add_chat_tables.py
backend/backend/app/: database.py  main.py
backend/backend/app/events/: __init__.py
backend/backend/app/middleware/: auth.py  rate_limit.py
backend/backend/app/models/: __init__.py  audit_log.py  tag.py  task_tag.py  user.py
backend/backend/app/routes/: tags.py  tasks.py
backend/backend/app/schemas/: chat.py  tag.py
backend/backend/mcp_server/: models.py  server_stdio.py  tools.py
backend/mcp_server/: __init__.py  database.py
frontend/: .dockerignore  .eslintrc.json  middleware.ts  next.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/tasks/: page.tsx
frontend/components/chat/: chat-input.tsx  chat-message.tsx  chat-toggle.tsx
frontend/components/forms/: SignupForm.tsx
frontend/components/tasks/: task-filters.tsx  task-form.tsx  task-search.tsx
frontend/components/ui/: button.tsx  confirm-dialog.tsx  tag-chip.tsx
frontend/frontend/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
frontend/frontend/app/: page.tsx
frontend/frontend/components/: error-boundary.tsx
frontend/frontend/lib/: api-client.ts  theme.ts
frontend/frontend/types/: index.ts
frontend/public/: .gitkeep
frontend/services/: chat.ts
phase-02/frontend/: package-lock.json
services/audit-service/: .dockerignore  Dockerfile  requirements.txt
services/audit-service/app/: __init__.py  config.py  main.py
services/audit-service/dapr/: subscription.yaml
(+23 files in other folders)
